[project]
name = "sparv-sbx-xml-sax-import"
version = "0.1.0"
description = "Efficient XML importer using SAX parsing"
readme = "README.md"
license = "MIT"
authors = [
	{ name = "Herb Lange", email = "herbert.lange@svenska.gu.se" }
]
dependencies = [
    "sparv~=5.0"
]
entry-points."sparv.plugin" = { sax_import = "sax_import" }
